dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/distancepar.c)


dnl People often put stuff in /usr/local.
if test /usr/local != "$exec_prefix" -a /usr/local != "$prefix" ; then
  CPPFLAGS="$CPPFLAGS -I/usr/local/include"
  LDFLAGS="$LDFLAGS -L/usr/local/lib"
fi


dnl Check for lib pthread
AC_CHECK_LIB(pthread,pthread_create,PKG_LIBS="${PKG_LIBS}  -lpthread ", [AC_CHECK_LIB(c_r,pthread_create,PKG_LIBS="${PKG_LIBS}  -pthread -lc_r",[AC_MSG_ERROR([pthread not found ])],)])



#PKG_CPPFLAGS="${PKG_CPPFLAGS} -I/usr/local/include/ "
#PKG_LIBS="${PKG_LIBS} -L/usr/local/lib/ -lgmp"

PKG_CPPFLAGS="${PKG_CPPFLAGS} -I/usr/local/include/ "
#PKG_LIBS="${PKG_LIBS} -L/usr/local/lib/ -pthread -lc_r"


 


AC_SUBST(PKG_CPPFLAGS)
AC_SUBST(PKG_LIBS)
AC_OUTPUT(src/Makevars)




